dynamic form creation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -372,8 +372,8 @@
       "disabled": {
         "label": "Disabled"
       },
-      "macAddress": {
-        "label": "Mac Address"
+      "localFilePath": {
+        "label": "Local File Path"
       },
       "firstName": {
         "label": "Name"
