connect page added into src

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,7 +10,8 @@
         "deviceManagement": "Manage",
         "vault": "Vault",
         "graphql": "Apollo",
-        "harbor": "Harbor"
+        "harbor": "Harbor",
+        "documentation": "Documentation"
       }
     },
     "header": {
