changed deviceName to deviceId

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -376,7 +376,7 @@
       "localFilePath": {
         "label": "Local File Path"
       },
-      "deviceName": {
+      "deviceId": {
         "label": "Device Name"
       },
       "destination": {
