--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,7 @@
         "settings": "Settings",
         "deviceManagement": "Manage",
         "vault": "Vault",
-        "graphql": "Apollo",
+        "apollo": "Apollo",
         "harbor": "Harbor",
         "documentation": "Documentation"
       }
@@ -153,7 +153,7 @@
       },
       "underConstructions": {
         "subTitle": "We are actively working on this page.",
-        "title": "Under constructions!"
+        "title": "Under Construction!"
       }
     },
     "reset": "Reset",
@@ -181,7 +181,7 @@
       "legend": {
         "unit": "Budget ($K)"
       },
-      "title": "Department"
+      "title": "Device Use"
     },
     "orderProgress": {
       "title": "Orders"
@@ -200,11 +200,11 @@
     },
     "salesByCategory": {
       "legend": {
-        "books": "Books",
-        "movies": "Movies & TV",
-        "software": "Software"
+        "books": "HTTP",
+        "movies": "MQTTS",
+        "software": "Other"
       },
-      "title": "Sales by Category"
+      "title": "Device by Protocol"
     },
     "salesHistory": {
       "title": "Sales History",
